# dataEngineering

./: cleaned_data.csv  column_statistics.json  confidence_score.json  main.py  patient_statistics.json  patient_unstructured_output.json  profiling_output.json  profiling_report.html  profiling_report.json  pyproject.toml  quality_rules.json  settings.json  unstructured_output.json
src/: app.py  llm_client.py  profiling_report.html
src/Tools/: column_stats_tool.py  confidence_score_tool.py  data_cleaning_tool.py  llm_schema_advisor.py  normalize_3nf_tool.py  postgre_schema_extractor.py  profiling_report_tool.py  quality_rules_tool.py  rules_tool.py  star_schema_tool.py  unstructured_profile_tool.py
src/data/: patientdatasample.csv  sampletestfile.xlsx  sampletestfilecsv.csv
src/mcp_server/: api.py  profiling_tools_server.py
src/nodes/: column_stats_node.py  confidence_score_node.py  data_cleaning_node.py  llm_analysis_node.py  profiling_report_node.py  quality_rules_node.py  rules_node.py  unstructured_profile_node.py
src/pkg_resources/: __init__.py
src/rules/: rules.yaml
tests/: test_column_stats_node.py  test_confidence_score_node.py  test_data_cleaning_tool.py  test_profiling_report_node.py  test_quality_rules_node.py  test_rules_node.py  test_unstructured_profile_node.py
