[project]
name = "dataprofilingagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "pandas<3.0",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "setuptools>=70.0.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "ydata-profiling>=4.18.1",
]
